           (like mod_ldap).
    * FIX: Fixed handling of dashboards without title in sidebar view snapin
    * FIX: titles and services got lost when moving join-columns in views
    * FIX: Fixed exception during initial page rendering in python 2.6 in special cases
           (Internal error: putenv() argument 2 must be string, not list)

    Notifications:
    * FIX: HTML mails: Handle the case where plugin argument is not set
    * FIX: HTML mails: remove undefinded placeholders like $GRAPH_CODE$

    WATO:
    * Improved handling of valuespec validations in WATO rule editor. Displaying a
      warning message when going to throw away the current settings.
    * FIX: fix bug where certain settings where not saved on IE. This was mainly
           on IE7, but also IE8,9,10 in IE7 mode (which is often active). Affected
           was e.g. the nodes of a cluster or the list of services for service
           inventory

1.2.2:
    Core:
    * Added $HOSTURL$ and $SERVICEURL$ to notification macros which contain an
      URL to the host/service details views with /check_mk/... as base.

    Checks & Agents:
    * FIX: blade_bx_load: remove invalid WATO group
    * FIX: lnx_bonding: handle also 802.3ad type bonds

    Notifications:
    * FIX: Removing GRAPH_CODE in html mails when not available
    * Using plugin argument 1 for path to pnp4nagios index php to render graphs
    * Little speedup of check_mk --notify

    Multisite:
    * FIX: Fixed umlaut handling in reloaded snapins

    WATO:
    * FIX: Fix several cases where WATO rule analyser did not hilite all matching rules
    * Added tcp port parameter to SSL certificate check (Thanks to Marcel Schulte)

    Event Console:
    * FIX: Syslog server is now able to parse RFC 5424 syslog messages

1.2.2b7:
    Checks & Agents:
    * FIX: postfix_mailq: fix labels in WATO rule, set correct default levels
    
    WATO:
    * FIX: syntax error in check_parameters

1.2.2b6:
    Core: